# econ_multicam_ros

./: .gitignore  CLAUDE.md  README.md
econ_ros/: CMakeLists.txt  package.xml
econ_ros/include/econ_ros/: adaptive_application.h  camera_common.h  debug.h  main.h  ros_publisher.h  v4l2_capture.h
econ_ros/launch/: driver.launch.py
econ_ros/src/: main.c  ros_publisher.c
excute_log/: log
install/: local_setup.sh  setup.sh
install/econ_ros/lib/econ_ros/: econ_ros
install/econ_ros/share/ament_index/resource_index/package_run_dependencies/: econ_ros
install/econ_ros/share/ament_index/resource_index/parent_prefix_path/: econ_ros
install/econ_ros/share/econ_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/econ_ros/share/econ_ros/cmake/: econ_rosConfig-version.cmake  econ_rosConfig.cmake
install/econ_ros/share/econ_ros/environment/: ament_prefix_path.dsv  path.dsv
install/econ_ros/share/econ_ros/launch/: driver.launch.py
log/: latest_build
src/econ_image_mosic/: README.md  package.xml  setup.cfg  setup.py
src/econ_image_mosic/econ_image_mosic/: image_mosaic_hw_node.py  image_mosaic_node.py
src/econ_image_mosic/launch/: image_mosaic.launch.py  image_mosaic_hw.launch.py
src/econ_mosaic_vpi/: CMakeLists.txt  README.md  package.xml
src/econ_mosaic_vpi/config/: params.yaml
src/econ_mosaic_vpi/include/econ_mosaic_vpi/: mosaic_view_node.hpp
src/econ_mosaic_vpi/launch/: mosaic_view.launch.py
src/econ_mosaic_vpi/src/: main.cpp  mosaic_view_node.cpp  mosaic_view_node_impl.cpp
src/econ_ros/: CMakeLists.txt
src/econ_ros/include/econ_ros/: camera_common.h  gst_ros_publisher.h  main.h  ros_publisher.h  v4l2_capture.h
src/econ_ros/launch/: driver.launch.py
src/econ_ros/src/: adaptive_application.cpp  gst_ros_publisher.c  main.c
src/econ_surround/: package.xml  setup.cfg  setup.py
src/econ_surround_view/: CMakeLists.txt  package.xml
src/econ_surround_view/config/: camera_calibration.yaml  surround_view_params.yaml
src/econ_surround_view/include/econ_surround_view/: camera_calibration_manager.hpp  surround_view_node.hpp  surround_view_stitcher.hpp  vpi_image_processor.hpp
src/econ_surround_view/launch/: surround_view.launch.py
src/econ_surround_view/src/: camera_calibration_manager.cpp  surround_view_node.cpp  surround_view_stitcher.cpp  vpi_image_processor.cpp
